--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,29 @@ body {
   overflow: visible;
 }
 
+
+
+.tv-overlay {
+  background: url('../assets/img/tvoverlay.gif');
+  background-size: cover;
+  position: absolute;
+  top: 22.5%;   /* adjust to fit the TV screen shape */
+  left: 10%;  /* adjust to fit */
+  right: 22%;
+  width: 60%; /* adjust to fit */
+  height: 56%; /* adjust to fit */
+  pointer-events: none;
+  z-index: 15;
+  opacity: 0.2;
+}
+
+
+
+
 /* Controls */
 .controls-vertical {
   position: absolute;
-  right: 6%;
+  right: 8%;
   bottom: 18%;
   display: flex;
   flex-direction: column;
@@ -51,7 +70,7 @@ body {
   border: 2px solid lime;
   color: lime;
   font-family: monospace;
-  padding: 15px 20px;
+  padding: 15px 0px;
   font-size: 1.2rem;
   width: 80px;
   cursor: pointer;
@@ -151,4 +170,7 @@ body {
   80% { transform: translate(-2px, 4px) skew(-0.7deg); }
   100% { transform: translate(0, -4px) skew(0deg); }
 }
+
+
+
 
